--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -51,7 +51,8 @@
                 android:layout_marginBottom="10dp">
 
                 <TextView
-                    android:text="Cari Berdasarkan Kecamattan"
+                    android:layout_marginBottom="8dp"
+                    android:text="Cari Berdasarkan Kecamatan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
@@ -78,6 +79,7 @@
                     android:layout_height="wrap_content">
 
                     <Spinner
+                        android:layout_marginBottom="10dp"
                         android:popupBackground="@color/colorWhite"
                         android:id="@+id/spinner_fruit"
                         android:layout_width="match_parent"
